--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,6 +98,9 @@ nav {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.small-screen {
+  display: none;
+}
 
 /*** main content & images ***/
 .products {
@@ -105,7 +108,8 @@ nav {
 }
 .image-text {
   display: block;
-  width: 30%;border: 4px solid black;
+  width: 30%;
+  border: 4px solid black;
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
@@ -143,4 +147,67 @@ nav {
 }
 footer {
   align-items: center;
+}
+
+/*** Media Queries ***/
+@media only screen and (max-width: 1024px) {
+  .content-width {
+    width: 100%;
+  }
+  nav {
+    justify-content: center;
+  }
+  nav .small-screen {
+    display: inline;
+  }
+  .desktop,
+  #glasses {
+    display: none;
+  }
+  .image-text {
+    width: 47%;
+  }
+}
+@media only screen and (max-width: 470px) {
+  .products,
+  .info {
+    width: 90%;
+    justify-content: center;
+  }
+  h1 {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  #new-arrival {
+    font-size: 0.77rem;
+    font-weight: bold;
+  }
+  .headline {
+    margin-top: 10rem;
+    width: 100%;
+    padding-left: 2rem;
+    padding-top: 1rem;
+  }
+  .background-image {
+    height: 15rem;
+  }
+  #watch,
+  #glasses,
+  .desktop,
+  #headline {
+    display: none;
+  }
+  .info {
+    flex-wrap: wrap;
+    display: block;
+  }
+  .location {
+    margin-bottom: 0.5rem;
+  }
+  footer p {
+    text-align: center;
+  }
+  #logo {
+    justify-content: center;
+  }
 }
