--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,7 @@ body {
 .full-width,
 .container
 .header
+.header-content,
 .headline,
 .background-image,
 .navigation,
@@ -27,7 +28,7 @@ nav
 .hours {
   display: flex;
 }
-span,
+a,
 p {
   font-size: 1rem;
 }
@@ -51,6 +52,9 @@ p {
   background-position: center;
   background-size: cover;
 }
+a {
+  color: white;
+}
 
 /*** header properties ***/
 #logo {
@@ -72,7 +76,7 @@ p {
   flex-direction: column;
   margin-top: 9rem;
   margin-bottom: 5rem;
-  width: 20rem;
+  width: 25rem;
 }
 h1 {
   margin-top: .25rem;
@@ -112,6 +116,7 @@ nav {
   border: 4px solid black;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  text-align: center;
 }
 .image {
   height: 9rem;
