--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,7 +96,7 @@ h1 {
 
 /*** navigation bar ***/
 nav {
-  display: inline-block;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 0.75rem;
