--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,14 +13,12 @@ body {
   font-family: Helvetica;
 }
 .full-width,
-.container
-.header
+.header,
 .header-content,
 .headline,
 .background-image,
 .navigation,
-nav
-.main-content,
+nav,
 .products,
 .image-text,
 .info,
@@ -96,7 +94,6 @@ h1 {
 
 /*** navigation bar ***/
 nav {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 0.75rem;
